--- a/quad/templates/create_comment.html
+++ b/quad/templates/create_comment.html
@@ -1,31 +1,40 @@
 {% extends "base.html" %} {% load staticfiles %} {% block content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="zone-comment">
-                <h2>Tout les commentaires</h2>
-                <ul class="list-unstyled">
-                    {% for comment in comments %}
-                    <li class="comment">
+<div class="container first-container">
+    <div class="main main-create-comment">
+        <div class="row">
+            <div class="col-md-12">
+                    <h2>Tout les commentaires</h2>
+                    <ul class="list-unstyled">
                         <div class="row">
-                            <div class="col-md-11">
-                                {{comment.body}}
-                            </div>
-                        </div>
-                    </li>
-                    {% endfor %}
-                </ul>
+                        {% for comment in comments %}
+                            <li class="comment col-md-6">
+                                <div class="row div-comment">
+                                    <div class="col-md-6">
+                                        De : {{ comment.author }}
+                                    </div>
+                                    <div class="col-md-offset-1 col-md-5">
+                                        Le {{comment.creation_date}}
+                                    </div>
+                                    <p class="col-md-12">
+                                        {{comment}}
+                                    </p>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </div>
+                    </ul>
+                <div class="creation-comment">
+                    <p>
+                        Votre commentaire :
+                    </p>
+                    <form class="form-comment text-center" action="{{request.path}}" method="POST">
+                        {% csrf_token %} {{form.author}} {{form.body}} {{form.article}}
+                        <button class="btn btn-secondary commit" type="submit">Envoyer</button>
+                    </form>
+                </div>
             </div>
-            <div class="creation-comment">
-                <p>
-                    Votre commentaire :
-                </p>
-                <form class="form-comment text-center" action="{{request.path}}" method="POST">
-                    {% csrf_token %} {{form.author}} {{form.body}} {{form.article}}
-                    <button class="btn btn-secondary commit" type="submit">Envoyer</button>
-                </form>
-            </div>
+
         </div>
 
     </div>
