--- a/quad/templates/profile.html
+++ b/quad/templates/profile.html
@@ -40,7 +40,7 @@
                             <div class="col-md-4 box-comment">
                                 <div>
 
-                                    <h3 class="text-center"><a href="#">{{comment.article}}</a></h3>
+                                    <h3 class="text-center"><a href="{% url 'detail_article' comment.article.slug %}">{{comment.article}}</a></h3>
                                     <p>
                                         {{comment}}
                                     </p>
