--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -134,24 +134,40 @@ nav{
         padding: 1em;
         background-color: #FBFBFB;
         border-radius: 5px;
-
+		p{
+			margin-top: 1em;
+		}
     }
 }
-.creation-comment{
-    background-color: #FBFBFB;
+.main-create-comment{
+	.comment{
+		margin-top: 1em;
+		.div-comment{
+			border: 1px solid #F9F9F9;
+			background-color: #FBFBFB;
+			border-radius: 5px;
+			margin: 1em;
+			p{
+				margin-top:1em;
+			}
+		}
+	}
+	.creation-comment{
+		background-color: #FBFBFB;
 
-    #id_body{
-        width: 80%;
-        height: 3em;
-        border: #EDEDED 1px solid;
-        border-radius: 5px;
+		#id_body{
+			width: 80%;
+			height: 3em;
+			border: #EDEDED 1px solid;
+			border-radius: 5px;
 
-    }
-    .commit{
-        margin: 1em;
-        background-color: #F7F7F7;
-        border: #EDEDED 1px solid;
-    }
+		}
+		.commit{
+			margin: 1em;
+			background-color: #F7F7F7;
+			border: #EDEDED 1px solid;
+		}
+	}
 }
 
 .partenaire{
@@ -222,7 +238,7 @@ footer{
 	}
 	.info-compte{
 		background-color: #FBFBFB;
-		margin: 6em 2em;
+		margin: 3em 2em;
 		padding: 2em 0;
 		border-radius: 5px;
 		img{
@@ -234,7 +250,7 @@ footer{
 		font-size:2em;
 	}
 	.info-comments{
-		margin: 6em 2em;
+		margin: 3em 2em;
 		padding: 2em 0;
 		border-radius: 5px;
 		.box-comment{
