clean code and responsive

--- a/quad/templates/create_article.html
+++ b/quad/templates/create_article.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 
-<div class="container first-container">
+<section class="container first-container">
     <div class="main main-create-article text-center">
         <h1>Création d'article</h1>
         <form role="form" name="form" action="{{request.path}}" method="post" enctype="multipart/form-data">
@@ -20,6 +20,6 @@
             </div>
         </form>
     </div>
-</div>
+</section>
 
 {% endblock %}
