--- a/quad/templates/create_comment.html
+++ b/quad/templates/create_comment.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load staticfiles %} {% block content %}
 
-<div class="container first-container">
+<section class="container first-container">
     <div class="main main-create-comment">
         <div class="row">
             <div class="col-md-12">
@@ -38,6 +38,6 @@
         </div>
 
     </div>
-</div>
+</section>
 
 {% endblock %}
