--- a/quad/templates/update_article.html
+++ b/quad/templates/update_article.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 
-<div class="container first-container">
+<section class="container first-container">
     <div class="main main-update-article">
         <h1>Modification de l'article {{article.title}}</h1>
         <div class="row">
@@ -24,6 +24,6 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 
 {% endblock %}
