--- a/quad/templates/update_user.html
+++ b/quad/templates/update_user.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 
-<div class="container first-container">
+<section class="container first-container">
     <div class="main">
         <h1 class="h1-update-user text-center">Modification de mes informations</h1>
         <div class="form-update-user text-center">
@@ -43,6 +43,6 @@
             </form>
         </div>
     </div>
-</div>
+</section>
 
 {% endblock %}
