--- a/quad/templates/dashboard.html
+++ b/quad/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 
-<div class="container first-container">
+<section class="container first-container">
     <div class="main main-dashboard">
 
         <div class="row">
@@ -11,14 +11,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <section class="col-md-6">
                 <h2 class="text-center">Article publiés</h2>
                 <ul class="list-unstyled">
                     {% for article in articles_on %}
                     <li class="espace-article">
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="/article/{{article.slug}}">
+                                <a href="{% url 'detail_article' article.slug %}">
                                     <img class="img-responsive" src="/media/{{article.image}}" alt="image article" />
                                 </a>
                             </div>
@@ -26,10 +26,10 @@
                                 <h3>{{article.title}}</h3>
                             </div>
                             <div class="col-md-4">
-                                <a class="lien-block" href="update/article/{{article.slug}}">
+                                <a class="lien-block" href="{% url 'update_article' article.slug %}">
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Modification
                                 </a>
-                                <a class="lien-block" href="delete/article/{{article.slug}}">
+                                <a class="lien-block" href="{% url 'delete_article' article.slug %}">
                                     <i class="fa fa-trash-o" aria-hidden="true"></i> Supression
                                 </a>
                             </div>
@@ -37,15 +37,15 @@
                     </li>
                     {% endfor %}
                 </ul>
-            </div>
-            <div class="col-md-6">
+            </section>
+            <section class="col-md-6">
                 <h2 class="text-center">Article non publié</h2>
                 <ul class="list-unstyled">
                     {% for article in articles_off %}
                     <li class="espace-article">
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="article/{{article.slug}}">
+                                <a href="{% url 'detail_article' article.slug %}">
                                     <img class="img-responsive" src="/media/{{article.image}}" alt="image article" />
                                 </a>
                             </div>
@@ -53,17 +53,20 @@
                                 <h3>{{article.title}}</h3>
                             </div>
                             <div class="col-md-4">
-                                <a href="update/article/{{article.slug}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                                <a href="delete/article/{{article.slug}}"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-
+                                <a class="lien-block" href="{% url 'update_article' article.slug %}">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Modification
+                                </a>
+                                <a class="lien-block" href="{% url 'delete_article' article.slug %}">
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i> Supression
+                                </a>
                             </div>
                         </div>
                     </li>
                     {% endfor %}
                 </ul>
-            </div>
+            </section>
         </div>
     </div>
-</div>
+</section>
 
 {% endblock %}
