--- a/quad/templates/delete_article.html
+++ b/quad/templates/delete_article.html
@@ -1,6 +1,6 @@
 {% extends "base2.html" %}
 {% block content %}
-<div class="container first-container">
+<section class="container first-container">
     <div class="main delete-article">
         <h1 class="text-center">Supprimer cet article?</h1>
         <form class="text-center" action="{{ request.path }}" method="POST">
@@ -9,5 +9,5 @@
             <a class="btn btn-default" href="{% url 'backoffice' %}">Annuler</a>
         </form>
     </div>
-</div>
+</section>
 {% endblock %}
