--- a/quad/templates/homepage.html
+++ b/quad/templates/homepage.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %} {% load staticfiles %} {% block content %}
 
-<div class="container first-container">
+<section class="container first-container">
     <div class="row main">
-        <div class="col-md-8">
+        <section class="col-md-8">
             <div class="row">
                 <div class="col-md-offset-1 col-md-10">
                     <div class="row">
                         {% for article in articles %}
-                        <div class="col-md-6 article-home">
+                        <article class="col-sm-12 col-md-6 article-home">
                             <a class="wrapper" href={% url 'detail_article' article.slug %}>
                                 <div class="text">
                                     <h2>{{ article.title }}</h2>
@@ -17,24 +17,24 @@
                                 </div>
                                 <img class="img-responsive" src="/media/{{article.image}}" alt="image article" />
                             </a>
-                        </div>
+                        </article>
                         {% endfor %}
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4 nav-vertical">
+        </section>
+        <section class="col-md-4 nav-vertical">
             <div class="row">
                 <div class="col-md-offset-1 col-md-10">
                     <h3>Articles les plus populaire :</h3>
-                    <div class="one-time">
+                    <article class="one-time">
 
                         {% for article in popular_article %}
                         <a href={% url 'detail_article' article.slug %}>
                             <img class="img-responssive" src="/media/{{article.image}}" alt="article">
                         </a>
                         {% endfor %}
-                    </div>
+                    </article>
                     <h3>Partenaires :</h3>
                     <div class="row">
                         <div class="col-md-6 partenaire">
@@ -102,9 +102,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-
+        </section>
     </div>
-</div>
+</section>
 
 {% endblock %}
