--- a/quad/templates/profile.html
+++ b/quad/templates/profile.html
@@ -1,19 +1,14 @@
-{% extends "base.html" %}
-{% block title %}Création de compte{% endblock %}
-{% block content %}
-{% load avatar_tags %}
-<div class="container registration first-container">
+{% extends "base.html" %} {% block title %}Création de compte{% endblock %} {% block content %} {% load avatar_tags %}
+<section class="container registration first-container">
     <div class="main">
-
         <div class="row user-detail">
             <div class="col-md-12">
                 <h1 class="text-center">Mon Compte</h1>
-                <div class="row info-compte">
+                <section class="row info-compte">
                     <div class="col-md-6 text-center">
                         <div class="row">
                             <div class="col-md-6">
                                 {% avatar user %}
-
                             </div>
                             <div class="col-md-6">
                                 <ul class="list-unstyled">
@@ -32,27 +27,29 @@
                             <li><a href="{%url 'auth_password_change' %}">Changer mot de passe</a></li>
                         </ul>
                     </div>
-                </div>
+                </section>
                 <h2 class="text-center">Mes commentaires</h2>
-                <div class="row info-comments">
-
-                            {%for comment in mycomments%}
-                            <div class="col-md-4 box-comment">
-                                <div>
-
-                                    <h3 class="text-center"><a href="{% url 'detail_article' comment.article.slug %}">{{comment.article}}</a></h3>
-                                    <p>
-                                        {{comment}}
-                                    </p>
-                                </div>
-
-
+                <section class="row info-comments">
+                    {%for comment in mycomments%}
+                    <div class="col-md-4 box-comment">
+                        <div class="row ">
+                            <div class="col-md-8">
+                                <h3 class="text-center"><a href="{% url 'detail_article' comment.article.slug %}">{{comment.article}}</a></h3>
                             </div>
-                            {%endfor%}
-                </div>
+                            <div class="col-md-4">
+                                {{comment.creation_date}}
+                            </div>
+                            <div class="col-md-12">
+                                <p>
+                                    {{comment}}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    {%endfor%}
+                </section>
             </div>
         </div>
     </div>
-</div>
-
+</section>
 {% endblock %}
