--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -3,7 +3,7 @@
 	display:none;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
 	#menu {
 		display:none;
 	}
@@ -16,7 +16,25 @@
     .container-fluide{
             padding: 0;
     }
+	.nav-vertical{
+		display: none;
+	}
 
+	.article-home{
+
+		.wrapper{
+			.text{
+				opacity: 1;
+			}
+			img{
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
+	.detail-last-article,footer{
+		display: none;
+	}
 }
 
 body{
@@ -254,15 +272,11 @@ footer{
 		padding: 2em 0;
 		border-radius: 5px;
 		.box-comment{
-			div{
-				background-color: #FBFBFB;
-				margin: 0.5em;
-				padding: 1em;
-				border-radius: 5px;
-				border: 1px solid #F9F9F9;
-				h3{
-					margin: 0 0 1em 0;
-				}
+			background-color: #FBFBFB;
+			border-radius: 5px;
+			border: 3px solid #F9F9F9;
+			h3{
+				margin: 0 0 1em 0;
 			}
 		}
 	}
