--- a/blog/templates/footer.html
+++ b/blog/templates/footer.html
@@ -3,37 +3,37 @@
         <div class="col-md-4">
             <h3>Partenaires</h3>
             <ul class="list-unstyled ul-foot">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Odso</a></li>
+                <li><a href="#">Le monde du quad</a></li>
+                <li><a href="#">Quad passion</a></li>
+                <li><a href="#">Quad SSV</a></li>
+                <li><a href="#">Fun off road</a></li>
             </ul>
         </div>
         <div class="col-md-4">
             <h3>Constructeurs</h3>
             <ul class="list-unstyled ul-foot">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Yamaha</a></li>
+                <li><a href="#">Suzuki</a></li>
+                <li><a href="#">Polaris</a></li>
+                <li><a href="#">Barossa</a></li>
+                <li><a href="#">Axr</a></li>
             </ul>
         </div>
         <div class="col-md-4">
             <h3>Circuits</h3>
             <ul class="list-unstyled ul-foot">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Circuit Moto Cross de Le Chêne</a></li>
+                <li><a href="#">Circuit Moto Cross de Mailly le Camp</a></li>
+                <li><a href="#">Circuit Moto Cross de Romilly sur Seine</a></li>
+                <li><a href="#">Terrains Moto Cross de l' Aude</a></li>
+                <li><a href="#">Circuit Moto Cross de Salles-sur-l’Hers</a></li>
             </ul>
         </div>
     </div>
     <div class="foot text-center">
         <p>
-            © 2005-2011 JOHN DOE ALL RIGHTS RESERVED
+            © 2005-2016 JOHN DOE ALL RIGHTS RESERVED
         </p>
     </div>
 </footer>
