--- a/quad/templates/homepage.html
+++ b/quad/templates/homepage.html
@@ -4,6 +4,16 @@
     <div class="row main">
         <section class="col-md-8">
             <div class="row">
+                <div class="col-md-12">
+                    <h1 class="text-center text-uppercase">le blog du quad</h1>
+                    <div class="intro-blog">
+                        <p>
+                            Quad essaie est un blog Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-offset-1 col-md-10">
                     <div class="row">
                         {% for article in articles %}
