--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -1,52 +1,16 @@
+body{
+	background-color: #DFE3E5;
+	background-image: url("/static/img/fond-site.png");
+	background-size: cover;
+	background-repeat: no-repeat;
+}
 
 .slicknav_menu{
 	display:none;
 }
-
-@media screen and (max-width: 1000px) {
-	#menu {
-		display:none;
-	}
-
-	.slicknav_menu {
-		display:block;
-        background-color: rgba(10,10,10,0.8);
-	}
-
-    .container-fluide{
-            padding: 0;
-    }
-	.nav-vertical{
-		display: none;
-	}
-
-	.article-home{
-
-		.wrapper{
-			.text{
-				opacity: 1;
-			}
-			img{
-				width: 100%;
-				height: 100%;
-			}
-		}
-	}
-	.detail-last-article,footer{
-		display: none;
-	}
-}
-
-body{
-    background-color: #DFE3E5;
-    background-image: url("/static/img/fond-site.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
  .main{
      margin-top: 60px;
  }
-
 nav{
     background-color: rgba(10,10,10,0.8);
     position: fixed;
@@ -86,12 +50,16 @@ nav{
 .img-head{
     width: 100%;
 }
-
 .first-container{
     background-color: #F7F7F7;
 	height: 100%;
 }
-
+.intro-blog{
+	margin-top: 2em;
+	padding: 2em;
+	background-color: #FBFBFB;
+	border-radius: 5px;
+}
 .article-home {
     margin-top: 2em;
 	img{
@@ -99,7 +67,6 @@ nav{
 		border-radius: 5px;
 	}
 }
-
 .wrapper {
     position: relative;
     padding: 0;
@@ -132,7 +99,6 @@ nav{
 .wrapper:hover .text {
     opacity:1;
 }
-
 .one-time {
     a{
         img{
@@ -282,7 +248,6 @@ footer{
 	}
 }
 .main-dashboard{
-
 	img{
 		border: 4px solid grey;
 		border-radius: 5px;
@@ -319,7 +284,6 @@ footer{
 		border: 4px solid grey;
 		border-radius: 5px;
 	}
-
 	p{
 		margin: 2em 0;
 	}
@@ -356,5 +320,36 @@ footer{
 	button{
 		margin-bottom: 2em;
 	}
+}
 
+@media screen and (max-width: 1000px) {
+	#menu {
+		display:none;
+	}
+
+	.slicknav_menu {
+		display:block;
+        background-color: rgba(10,10,10,0.8);
+	}
+
+    .container-fluide{
+            padding: 0;
+    }
+	.nav-vertical{
+		display: none;
+	}
+	.article-home{
+		.wrapper{
+			.text{
+				opacity: 1;
+			}
+			img{
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
+	.detail-last-article,footer{
+		display: none;
+	}
 }
